--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.3.1",
+    "@material-ui/icons": "^3.0.1",
     "gh-pages": "^2.0.1",
     "query-string": "^6.2.0",
     "react": "^16.6.0",
