--- a/public/ajax.yaml
+++ b/public/ajax.yaml
@@ -1,6 +1,7 @@
 title: 結果
-body:
-  - [Message, 結果が出ました]
-  - [Link, Google で自力で探す, https://www.google.co.jp/search?q=%E6%97%85]
-  - [EnumForm, _, [初めから]]
-  - [getStory, story.yaml]
+body: [
+  [message, 結果が出ました],
+  [link, Google で自力で探す, https://www.google.co.jp/search?q=%E6%97%85],
+  [enumForm, _, [初めから]],
+  [getStory, story.yaml],
+]
