--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "build": "react-scripts build"
   },
   "dependencies": {
-    "@material-ui/core": "^3.3.1",
-    "@material-ui/icons": "^3.0.1",
+    "@date-io/luxon": "^1.3.8",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "gh-pages": "^2.0.1",
-    "js-yaml": "^3.12.0",
-    "luxon": "^1.4.4",
-    "material-ui-pickers": "^1.0.0",
-    "query-string": "^6.2.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "js-yaml": "^3.13.1",
+    "luxon": "^1.16.1",
+    "material-ui-pickers": "^2.2.4",
+    "query-string": "^6.8.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
-    "react-scripts": "^2.0.5",
-    "rxjs": "^6.3.3",
-    "smooth-scroll": "^14.2.1"
+    "react-scripts": "^3.0.1",
+    "rxjs": "^6.5.2",
+    "smooth-scroll": "^16.1.0"
   },
   "homepage": "https://ytoune.github.io/chat-messages/",
   "browserslist": [
