--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "chat-messages",
   "license": "MIT",
   "scripts": {
-    "deploy": "npm run-script build && npm run-script push-page",
+    "deploy": "yarn build && yarn push-page",
     "push-page": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "dependencies": {
-    "@date-io/luxon": "^1.3.8",
-    "@material-ui/core": "^4.1.3",
-    "@material-ui/icons": "^4.2.1",
-    "gh-pages": "^2.0.1",
-    "js-yaml": "^3.13.1",
-    "luxon": "^1.16.1",
-    "material-ui-pickers": "^2.2.4",
-    "query-string": "^6.8.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-loading": "^2.0.3",
-    "react-scripts": "^3.0.1",
-    "rxjs": "^6.5.2",
-    "smooth-scroll": "^16.1.0"
+    "@date-io/luxon": "2.10.6",
+    "@material-ui/core": "4.11.1",
+    "@material-ui/icons": "4.9.1",
+    "gh-pages": "3.1.0",
+    "js-yaml": "3.14.0",
+    "luxon": "1.25.0",
+    "material-ui-pickers": "2.2.4",
+    "query-string": "6.13.7",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-loading": "2.0.3",
+    "react-scripts": "4.0.1",
+    "rxjs": "6.6.3",
+    "smooth-scroll": "16.1.3"
   },
   "homepage": "https://ytoune.github.io/chat-messages/",
   "browserslist": [
