--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "build": "react-scripts build"
   },
   "dependencies": {
-    "@date-io/luxon": "2.10.6",
+    "@date-io/luxon": "1.3.13",
     "@material-ui/core": "4.11.1",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/pickers": "3.2.10",
     "gh-pages": "3.1.0",
     "js-yaml": "3.14.0",
     "luxon": "1.25.0",
-    "material-ui-pickers": "2.2.4",
     "query-string": "6.13.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -25,9 +25,6 @@
   },
   "homepage": "https://ytoune.github.io/chat-messages/",
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    ">0.2%"
   ]
 }
